<resources>
    <string name="app_name">PA</string>
    <string name="main_email">Email</string>
    <string name="main_password">Password</string>
    <string name="main_login">Login</string>
    <string name="main_register">Register</string>
    <string name="main_confirmpassword">Confirm Password</string>
    <string name="main_welcome">Welcome</string>
    <string name="main_plate">License Plate</string>
    <string name="reservation_time">00:00</string>
    <string name="reservation_day">dd/mm/yyyy</string>
    <string name="reservation_button">Make Reservation</string>
    <string name="reservation_page">Reservations</string>
    <string name="payment_page">Payments</string>
    <string name="start_time_label">Start Time</string>
    <string name="end_time_label">End Time</string>
    <string name="day_label">Day</string>
    <string-array name="payment_methods">
        <item>MBWay</item>
        <item>PayPal</item>
        <item>Multibanco</item>
    </string-array>

</resources>