<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_welcome"
            android:id="@+id/main_tv"
            android:textSize="50sp"
            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />


        <EditText
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:hint="@string/main_plate"
            android:id="@+id/main_plate_et"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/main_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        />

        <EditText
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:hint="@string/main_email"
            android:id="@+id/main_email_et"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/main_plate_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        />

        <EditText
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:hint="@string/main_password"
            android:id="@+id/password"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/main_email_et"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        />

        <EditText
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:hint="@string/main_confirmpassword"
            android:id="@+id/confirm_password"
            android:singleLine="true"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        />




        <Button
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:id="@+id/register"
            android:text="@string/main_register"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="perform_action"
            android:backgroundTint="#FFA500"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <Button
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:id="@+id/login"
            android:text="@string/main_login"
            app:layout_constraintTop_toBottomOf="@+id/register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="perform_action"
            android:backgroundTint="#FFA500"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>