<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReservationActivity">

    <EditText
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:hint="@string/reservation_time"
        android:id="@+id/start_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:hint="@string/reservation_time"
        android:id="@+id/end_et"
        app:layout_constraintTop_toBottomOf="@id/start_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:hint="@string/reservation_day"
        android:id="@+id/day_et"
        app:layout_constraintTop_toBottomOf="@id/end_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:hint="@string/reservation_button"
        android:id="@+id/reservation_bt"
        app:layout_constraintTop_toBottomOf="@+id/day_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:onClick="perform_action"
        android:backgroundTint="#FFA500"
        android:textColor="@color/black"
        android:textStyle="bold"
        />


</androidx.constraintlayout.widget.ConstraintLayout>