<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/backgound_app"
        android:scaleType="fitXY"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:src="@drawable/np" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/const_main_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/main_welcome"
            android:textSize="50sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/main_email_et"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:hint="@string/main_email"
            android:singleLine="true"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_tv"
        />


        <EditText
            android:id="@+id/main_password_opt"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/main_password"
            android:singleLine="true"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_email_et"
            android:inputType="textPassword"
            />
        />
        />

        <Button
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/main_login"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="perform_action"
            android:elevation="5dp"
            android:padding="10dp"
            android:stateListAnimator="@null"
            android:transitionName="login_button"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_password_opt" />


        <Button
            android:id="@+id/register"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:text="@string/main_register"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="perform_action"
            android:elevation="5dp"
            android:padding="10dp"
            android:stateListAnimator="@null"
            android:transitionName="login_button"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@android:color/holo_blue_bright"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>